platforms/ios/build/emulator/metadata-generation-stderr-i386.txt
clang version 3.7.0 (tags/RELEASE_370/final)
Target: i386-apple-darwin
Thread model: posix
clang Invocation:
 "clang-tool" "-cc1" "-triple" "i386-apple-ios8.0.0" "-fsyntax-only" "-disable-free" "-disable-llvm-verifier" "-main-file-name" "umbrella.h" "-mrelocation-model" "pic" "-pic-level" "2" "-mthread-model" "posix" "-mdisable-fp-elim" "-masm-verbose" "-target-cpu" "yonah" "-target-linker-version" "242.2" "-v" "-dwarf-column-info" "-resource-dir" "../lib/clang/3.7.0" "-isysroot" "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator8.4.sdk" "-iquote" "/Users/burkeholland/dev/burkeholland/nativescript-material-switch/demo/platforms/ios/build/emulator/JTMaterialSwitch.framework/Headers" "-D" "COCOAPODS=1" "-D" "DEBUG=1" "-I" "/Users/burkeholland/dev/burkeholland/nativescript-material-switch/demo/platforms/ios/build/emulator/include" "-I" "/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include" "-I" "/Users/burkeholland/dev/burkeholland/nativescript-material-switch/demo/platforms/ios/internal" "-I" "/Users/burkeholland/dev/burkeholland/nativescript-material-switch/demo/platforms/ios/internal/NativeScript/include" "-F/Users/burkeholland/dev/burkeholland/nativescript-material-switch/demo/platforms/ios/build/emulator" "-F/Users/burkeholland/dev/burkeholland/nativescript-material-switch/demo/platforms/ios/../../lib/iOS" "-Wno-unknown-pragmas" "-Wno-ignored-attributes" "-std=gnu99" "-fdebug-compilation-dir" "/Users/burkeholland/dev/burkeholland/nativescript-material-switch/demo/platforms/ios/internal/metadata-generator/bin" "-ferror-limit" "0" "-fmessage-length" "0" "-stack-protector" "1" "-mstackrealign" "-fblocks" "-fimplicit-module-maps" "-fobjc-runtime=ios-8.0.0" "-fencode-extended-block-signature" "-fobjc-exceptions" "-fexceptions" "-fmax-type-align=16" "-fdiagnostics-show-option" "-x" "objective-c" "umbrella.h"

ignoring nonexistent directory "/Users/burkeholland/dev/burkeholland/nativescript-material-switch/demo/platforms/ios/build/emulator/include"
ignoring nonexistent directory "/Users/burkeholland/dev/burkeholland/nativescript-material-switch/demo/platforms/ios/../../lib/iOS"
ignoring nonexistent directory "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator8.4.sdk/Library/Frameworks"
#include "..." search starts here:
 /Users/burkeholland/dev/burkeholland/nativescript-material-switch/demo/platforms/ios/build/emulator/JTMaterialSwitch.framework/Headers
#include <...> search starts here:
 /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include
 /Users/burkeholland/dev/burkeholland/nativescript-material-switch/demo/platforms/ios/internal
 /Users/burkeholland/dev/burkeholland/nativescript-material-switch/demo/platforms/ios/internal/NativeScript/include
 /Users/burkeholland/dev/burkeholland/nativescript-material-switch/demo/platforms/ios/build/emulator (framework directory)
 /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator8.4.sdk/usr/local/include
 ../lib/clang/3.7.0/include
 /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator8.4.sdk/usr/include
 /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator8.4.sdk/System/Library/Frameworks (framework directory)
End of search list.
clang version 3.7.0 (tags/RELEASE_370/final)
Target: i386-apple-darwin
Thread model: posix
clang Invocation:
 "clang-tool" "-cc1" "-triple" "i386-apple-ios8.0.0" "-fsyntax-only" "-disable-free" "-disable-llvm-verifier" "-main-file-name" "umbrella.h" "-mrelocation-model" "pic" "-pic-level" "2" "-mthread-model" "posix" "-mdisable-fp-elim" "-masm-verbose" "-target-cpu" "yonah" "-target-linker-version" "242.2" "-v" "-dwarf-column-info" "-resource-dir" "../lib/clang/3.7.0" "-isysroot" "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator8.4.sdk" "-iquote" "/Users/burkeholland/dev/burkeholland/nativescript-material-switch/demo/platforms/ios/build/emulator/JTMaterialSwitch.framework/Headers" "-D" "COCOAPODS=1" "-D" "DEBUG=1" "-I" "/Users/burkeholland/dev/burkeholland/nativescript-material-switch/demo/platforms/ios/build/emulator/include" "-I" "/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include" "-I" "/Users/burkeholland/dev/burkeholland/nativescript-material-switch/demo/platforms/ios/internal" "-I" "/Users/burkeholland/dev/burkeholland/nativescript-material-switch/demo/platforms/ios/internal/NativeScript/include" "-F/Users/burkeholland/dev/burkeholland/nativescript-material-switch/demo/platforms/ios/build/emulator" "-F/Users/burkeholland/dev/burkeholland/nativescript-material-switch/demo/platforms/ios/../../lib/iOS" "-Wno-unknown-pragmas" "-Wno-ignored-attributes" "-std=gnu99" "-fdebug-compilation-dir" "/Users/burkeholland/dev/burkeholland/nativescript-material-switch/demo/platforms/ios/internal/metadata-generator/bin" "-ferror-limit" "0" "-fmessage-length" "0" "-stack-protector" "1" "-mstackrealign" "-fblocks" "-fimplicit-module-maps" "-fobjc-runtime=ios-8.0.0" "-fencode-extended-block-signature" "-fobjc-exceptions" "-fexceptions" "-fmax-type-align=16" "-fdiagnostics-show-option" "-x" "objective-c" "umbrella.h"

clang -cc1 version 3.7.0 based upon LLVM 3.7.0 default target x86_64-apple-darwin15.0.0
ignoring nonexistent directory "/Users/burkeholland/dev/burkeholland/nativescript-material-switch/demo/platforms/ios/build/emulator/include"
ignoring nonexistent directory "/Users/burkeholland/dev/burkeholland/nativescript-material-switch/demo/platforms/ios/../../lib/iOS"
ignoring nonexistent directory "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator8.4.sdk/Library/Frameworks"
#include "..." search starts here:
 /Users/burkeholland/dev/burkeholland/nativescript-material-switch/demo/platforms/ios/build/emulator/JTMaterialSwitch.framework/Headers
#include <...> search starts here:
 /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include
 /Users/burkeholland/dev/burkeholland/nativescript-material-switch/demo/platforms/ios/internal
 /Users/burkeholland/dev/burkeholland/nativescript-material-switch/demo/platforms/ios/internal/NativeScript/include
 /Users/burkeholland/dev/burkeholland/nativescript-material-switch/demo/platforms/ios/build/emulator (framework directory)
 /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator8.4.sdk/usr/local/include
 ../lib/clang/3.7.0/include
 /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator8.4.sdk/usr/include
 /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator8.4.sdk/System/Library/Frameworks (framework directory)
End of search list.
In file included from umbrella.h:778:
/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator8.4.sdk/System/Library/Frameworks/Metal.framework/Headers/Metal.h:8:2: error: Metal Simulator is currently unsupported
#error Metal Simulator is currently unsupported
 ^
1 error generated.
